Closed
Bug 229583
Opened 22 years ago
Closed 22 years ago
Default value for mLineHeight incorrect in nsScrollPortView
Categories
(Core :: Web Painting, defect, P1)
Tracking
()
RESOLVED
FIXED
People
(Reporter: atontti, Assigned: roc)
Details
(Whiteboard: [patch])
Attachments
(1 file)
527 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20031221
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20031221
According mozilla/view/public/nsIScrollableView.h default height for mLineHeight
should be 12 points but now it is initialized to zero (0).
/**
* Set the height of a line used for line scrolling.
* @param aHeight new line height in app units. the default
* height is 12 points.
* @return error status
*/
NS_IMETHOD SetLineHeight(nscoord aHeight) = 0;
Normally this wouldn't be problem but I am writting XUL app that uses style
overflow: -moz-scrollbars-none
which seems to inhibit nsScrollPortView::SetLineHeight() calls for the view
in question so nsScrollPortView:ScrollByLines() doesn't work as expected
(no scrolling at all).
I have made a patch that initializes mLineHeight to 12 points as
nsScrollableView.h is documenting.
Reproducible: Always
Steps to Reproduce:
Actual Results:
Incorrect value (0) for mLineHeight.
Expected Results:
Default value (12 points) [or line height of applicable font].
Tested with own CVS build (trunk 2003122103 and 2003122302).
![]() |
Reporter | |
Comment 1•22 years ago
|
||
![]() |
Reporter | |
Updated•22 years ago
|
Whiteboard: [patch]
![]() |
Reporter | |
Updated•22 years ago
|
Attachment #138068 -
Flags: superreview?
Attachment #138068 -
Flags: review?
![]() |
||
Comment 2•22 years ago
|
||
Asko Tontti, you need to ask for review from a specific reviewer (I recommend
roc@ocallahan.org in this case). Otherwise, no one will get the review
request....
![]() |
Reporter | |
Comment 3•22 years ago
|
||
Comment on attachment 138068 [details] [diff] [review]
Initialize mLineHeight to 12 points
BZ, thanks for the tip.
Attachment #138068 -
Flags: review? → review?(roc)
Assignee | ||
Comment 4•22 years ago
|
||
Comment on attachment 138068 [details] [diff] [review]
Initialize mLineHeight to 12 points
Looks reasonable. Do you want me to check it in?
Attachment #138068 -
Flags: superreview?
Attachment #138068 -
Flags: superreview+
Attachment #138068 -
Flags: review?(roc)
Attachment #138068 -
Flags: review+
![]() |
Reporter | |
Comment 5•22 years ago
|
||
roc: yes, that would be nice.
Assignee | ||
Updated•22 years ago
|
Priority: -- → P1
Assignee | ||
Comment 6•22 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
![]() |
Reporter | |
Comment 7•22 years ago
|
||
Thanks.
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•