Bug 229583. initialize line height in scrolling views. patch by Asko Tontti. r+sr=roc